@@ -186,6 +186,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7932) Make sure that edit toolbar clears floats so it appears correctly.
 * (bug 6873) When viewing old revisions, add link to diff to current version.
 * (bug 3315) Allow rollback directly from history page.
+* Detect CGI configurations where PATH_INFO is set up correctly.
+  PHP config var cgi.fix_pathinfo isn't detectable through ini_get(), but
+  we can find some side-effects. Only tested on lighttpd so far, hopefully
+  right on Apache too!
 
 
 == Languages updated ==
